# PROOF-Analysis-Framework

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  PAF.C  PAF_setup.sh  PAF_setup_portable.sh  README  README.md  TODO.txt
documentation/tools/: 1. General.md
documentation/tutorials/: 1. First selector.md  1. Introducción.md  2. Configuración.md  3. Crear primer selector.md  4. Crear y lanzar proyecto  4. Crear y lanzar proyecto.md  5. Pasando parámetros.md  6. Funciones PAF selector.md  7. Configuración de un proyecto.md  PAF.md
etc/: BUILD.sh.in  DefaultProject.C.in  DefaultSelector.C.in  DefaultSelector.h.in  Makefile.in  SETUP.C.in  SETUPLib.C.in  logger.conf  pafautocomplete.sh  proofcloud.conf  qsub.conf  startproof.conf  xpd.cf.in
examples/: RunChainedSelector.C  RunChainedSelectorSamples.C  RunTree.C
examples/BasicChainedSelector/: RunChainedSelector.C
examples/BasicSelector/: RunBasicSelector.C
examples/ChainedSelectorWithVectors/: ChainedSelectorWithVectors.C
inc/: LinkDef.hxx
inc/exceptions/: PAFExceptionCommandExpression.h  PAFIException.h
inc/logger/: PAFConsoleLogger.h  PAFILogger.h  PAFLogger.h  PAFLoggerEnum.h  PAFRESTLogger.h
inc/monitor/: PAFMonitor.h  PAFRESTMonitor.h
inc/paf/: PAF.h
inc/paf_tools/: PAFAbstractTool.h  PAFITool.h  PAFToolAddHisto.h  PAFToolCreateProject.h  PAFToolCreateSelector.h  PAFToolInspectTree.h  PAFToolReset.h  PAFTools.h
inc/samples/: PAFSample.h  PAFSampleCollection.h
inc/settings/: PAFEnvironmentVariableSettings.h  PAFISettings.h  PAFManualSettings.h
inc/util/: .PAFStopWatch.h.kate-swp  PAFNamedItem.h  PAFStopWatch.h  PAFStringUtil.h
inc/variable_container/: PAFGenericItemVariableContainer.h  PAFVariableContainer.h
sandbox/: Launcher.sh  RunBasicSelector.C  RunChainedSelector.C  RunPAFAnalysis.C  RunPAFAnalysisMT.C  RunPAFChain.C  RunScript.C.template  Script.sh  inputdata.root
scripts/: CheckCompilation.C  PAF.h  PAFCompiledUtils.C  PAFCompiledUtils.h  PAFModePlugin.C  PAFModePlugin.h  PAFOptions.C  PAFOptions.h  PAFUtils.C  PAFUtils.C~  PROOFCloudPlugin.C  PROOFCloudPlugin.h  PROOFClusterPlugin.C  PROOFClusterPlugin.h  PROOFLitePlugin.C  PROOFLitePlugin.h  PoDPlugin.C  PoDPlugin.h  SequentialPlugin.C  SequentialPlugin.h
src/: PAF.cxx  PAF.h
src/computing/: PAFBaseSelector.cxx  PAFBaseSelector.h  PAFBaseSelectorLinkDef.h  PAFChainItemSelector.cxx  PAFChainItemSelector.h  PAFChainItemSelectorLinkDef.h  PAFChainSelector.cxx  PAFChainSelector.h  PAFChainSelectorLinkDef.h  PAFISelector.cxx  PAFISelector.h  PAFISelectorLinkDef.h
src/computing_helpers/: PAFFindHelper.cxx  PAFFindHelper.h  PAFIHelper.cxx  (+2 more)
test/: CMakeLists.txt  README.md
test/computing/: .AddDataFiles.cxx.kate-swp  AbstractPrimitiveType.cxx  AbstractPrimitiveType.h  ArrayDoubleType.cxx  ArrayDoubleType.h  CMakeLists.txt  DoublePrimitiveType.cxx  DoublePrimitiveType.h  FloatPrimitiveType.cxx  FloatPrimitiveType.h  GetSizeOfBoolMethod.cxx  GetSizeOfBoolMethod.h  GetSizeOfDoubleMethod.cxx  GetSizeOfDoubleMethod.h  GetSizeOfIntMethod.cxx  GetSizeOfIntMethod.h  IntPrimitiveType.cxx  IntPrimitiveType.h  LongPrimitiveType.cxx  LongPrimitiveType.h  PassingParameters.cxx  PassingParameters.h  PassingParametersObjects.cxx  PassingParametersObjects.h  VectorDoubleType.cxx  VectorDoubleType.h  VectorTLorentzType.cxx  VectorTLorentzType.h
test/computing_helpers/: CMakeLists.txt  FindHelperFind.cxx  FindHelperFind.h  FindHelperFindPAFNamed.cxx  FindHelperFindPAFNamed.h
test/environments/: AbstractEnvironmentTest.cxx  AbstractEnvironmentTest.h  CMakeLists.txt  PROOFLiteEnvironment.cxx  PROOFLiteEnvironment.h  SequentialEnvironment.cxx  SequentialEnvironment.h  SequentialEnvironmentTwoFiles.cxx  SequentialEnvironmentTwoFiles.h
test/project/: AddDataFiles.cxx  AddDataFiles.h  CMakeLists.txt
test/selectors_testing/ArrayDoubleTestSelector/: ArrayDoubleTestSelector.C  ArrayDoubleTestSelector.h
test/selectors_testing/GetSizeOfBoolTestSelector/: GetSizeOfBoolTestSelector.C  GetSizeOfBoolTestSelector.h
test/selectors_testing/GetSizeOfDoubleTestSelector/: GetSizeOfDoubleTestSelector.C  GetSizeOfDoubleTestSelector.h
test/selectors_testing/GetSizeOfIntTestSelector/: GetSizeOfIntTestSelector.C  GetSizeOfIntTestSelector.h
test/selectors_testing/GetSizeOfTestSelector/: GetSizeOfTestSelector.C  GetSizeOfTestSelector.h
test/selectors_testing/PassingParametersConsumerTestSelector/: PassingParametersConsumerTestSelector.C  PassingParametersConsumerTestSelector.h
test/selectors_testing/PassingParametersObjectsConsumerTestSelector/: PassingParametersObjectsConsumerTestSelector.C  PassingParametersObjectsConsumerTestSelector.h
test/selectors_testing/PassingParametersObjectsSeedTestSelector/: .PassingParametersSeedTestSelector.C.kate-swp  PassingParametersObjectsSeedTestSelector.C  PassingParametersObjectsSeedTestSelector.h
test/selectors_testing/PassingParametersSeedTestSelector/: PassingParametersSeedTestSelector.C  PassingParametersSeedTestSelector.h
test/selectors_testing/PrimitiveDoubleTestSelector/: PrimitiveDoubleTestSelector.C  PrimitiveDoubleTestSelector.h
test/selectors_testing/PrimitiveFloatTestSelector/: PrimitiveFloatTestSelector.C  PrimitiveFloatTestSelector.h
test/selectors_testing/PrimitiveIntTestSelector/: PrimitiveIntTestSelector.C  PrimitiveIntTestSelector.h
test/selectors_testing/PrimitiveLongTestSelector/: PrimitiveLongTestSelector.C  PrimitiveLongTestSelector.h
test/selectors_testing/VectorDoubleTestSelector/: VectorDoubleTestSelector.C  VectorDoubleTestSelector.h
test/selectors_testing/VectorTLorentzTestSelector/: VectorTLorentzTestSelector.C  VectorTLorentzTestSelector.h
test/test_utils/: PAFTest.cxx  PAFTest.h  PAFTestExpectedException.cxx  PAFTestExpectedException.h  PAFTestIException.cxx  PAFTestIException.h
test/util/: CMakeLists.txt  StringUtilSplit.cxx  StringUtilSplit.h
test/variable_container/: .PrimitiveTypes.cxx.kate-swp  CMakeLists.txt  PrimitiveTypes.cxx  PrimitiveTypes.h  PrimitiveTypesSerialization.cxx  PrimitiveTypesSerialization.h  TObjectSerialization.cxx  TObjectSerialization.h
(+211 files in other folders)
