add_executable(IntPrimitiveType IntPrimitiveType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::IntPrimitiveType IntPrimitiveType)

add_executable(FloatPrimitiveType FloatPrimitiveType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::FloatPrimitiveType FloatPrimitiveType)

add_executable(DoublePrimitiveType DoublePrimitiveType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::DoublePrimitiveType DoublePrimitiveType)

add_executable(LongPrimitiveType LongPrimitiveType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::LongPrimitiveType LongPrimitiveType)

add_executable(ArrayDoubleType ArrayDoubleType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::ArrayDoubleType ArrayDoubleType)

add_executable(VectorDoubleType VectorDoubleType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::VectorDoubleType VectorDoubleType)

add_executable(VectorTLorentzType VectorTLorentzType.cxx AbstractPrimitiveType.cxx)
add_test(Computing::VectorTLorentzType VectorTLorentzType)

add_executable(GetSizeOfDoubleMethod GetSizeOfDoubleMethod.cxx AbstractPrimitiveType.cxx)
add_test(Computing::GetSizeOfDoubleMethod GetSizeOfDoubleMethod)

add_executable(GetSizeOfIntMethod GetSizeOfIntMethod.cxx AbstractPrimitiveType.cxx)
add_test(Computing::GetSizeOfIntMethod GetSizeOfIntMethod)

add_executable(GetSizeOfBoolMethod GetSizeOfBoolMethod.cxx AbstractPrimitiveType.cxx)
add_test(Computing::GetSizeOfBoolMethod GetSizeOfBoolMethod)
