add_executable(SequentialEnvironment SequentialEnvironment.cxx AbstractEnvironmentTest.cxx)
add_test(Environments::SequentialEnvironment SequentialEnvironment)

add_executable(PROOFLiteEnvironment PROOFLiteEnvironment.cxx AbstractEnvironmentTest.cxx)
add_test(Environments::PROOFLiteEnvironment PROOFLiteEnvironment)
