add_executable(PrimitiveTypes PrimitiveTypes.cxx)
add_test(VariableContainer::PrimitiveTypes PrimitiveTypes)

add_executable(PrimitiveTypesSerialization PrimitiveTypesSerialization.cxx)
add_test(VariableContainer::PrimitiveTypesSerialization PrimitiveTypesSerialization)

add_executable(TObjectSerialization TObjectSerialization.cxx)
add_test(VariableContainer::TObjectSerialization TObjectSerialization)
